@@ -1,23 +1,44 @@
 package com.swm.studywithmentor.util;
 
-import com.swm.studywithmentor.model.dto.create.*;
-import com.swm.studywithmentor.model.entity.*;
+import com.swm.studywithmentor.model.dto.ActivityDto;
+import com.swm.studywithmentor.model.dto.ClazzDto;
+import com.swm.studywithmentor.model.dto.CourseDto;
+import com.swm.studywithmentor.model.dto.EnrollmentDto;
+import com.swm.studywithmentor.model.dto.FieldDto;
+import com.swm.studywithmentor.model.dto.InvoiceDto;
+import com.swm.studywithmentor.model.dto.LessonDto;
+import com.swm.studywithmentor.model.dto.MentorDto;
+import com.swm.studywithmentor.model.dto.SessionDto;
+import com.swm.studywithmentor.model.dto.StudentDto;
+import com.swm.studywithmentor.model.dto.UserDto;
+import com.swm.studywithmentor.model.dto.UserProfileDto;
+import com.swm.studywithmentor.model.dto.create.ActivityCreateDto;
+import com.swm.studywithmentor.model.dto.create.ActivityCreateDtoAlone;
+import com.swm.studywithmentor.model.dto.create.ClazzCreateDto;
+import com.swm.studywithmentor.model.dto.create.CourseCreateDto;
+import com.swm.studywithmentor.model.dto.create.FieldCreateDto;
+import com.swm.studywithmentor.model.dto.create.ImageDto;
+import com.swm.studywithmentor.model.dto.create.LessonCreateDto;
+import com.swm.studywithmentor.model.dto.create.SessionCreateDto;
 import com.swm.studywithmentor.model.dto.update.SessionUpdateDto;
+import com.swm.studywithmentor.model.entity.Activity;
+import com.swm.studywithmentor.model.entity.Clazz;
+import com.swm.studywithmentor.model.entity.Field;
+import com.swm.studywithmentor.model.entity.Image;
+import com.swm.studywithmentor.model.entity.Lesson;
+import com.swm.studywithmentor.model.entity.course.Course;
 import com.swm.studywithmentor.model.entity.enrollment.Enrollment;
 import com.swm.studywithmentor.model.entity.invoice.Invoice;
+import com.swm.studywithmentor.model.entity.session.Session;
 import com.swm.studywithmentor.model.entity.user.Mentor;
 import com.swm.studywithmentor.model.entity.user.Student;
 import com.swm.studywithmentor.model.entity.user.User;
-import com.swm.studywithmentor.model.dto.*;
-import com.swm.studywithmentor.model.entity.course.Course;
-import com.swm.studywithmentor.model.entity.session.Session;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Component
 public class ApplicationMapper {
@@ -220,19 +241,22 @@ public class ApplicationMapper {
 
     public Image toEntity(ImageDto dto) {
         return mapper.map(dto, Image.class);
-
     }
+
+    public void toEntity(ImageDto dto, Image image) {
+        mapper.map(dto, image);
+    }
+
     public List<Image> toEntity (List<ImageDto> dtos) {
-        return dtos.stream().map(this::toEntity).collect(Collectors.toList());
+        return dtos.stream().map(this::toEntity).toList();
     }
     public ImageDto toDto(Image entity) {
         return mapper.typeMap(Image.class, ImageDto.class)
-                .addMappings(mapping -> mapping.map(image -> image.getCourse().getId(), ImageDto::setCourse))
                 .map(entity);
     }
 
     public List<ImageDto> toDto(List<Image> entities) {
-        return entities.stream().map(this::toDto).collect(Collectors.toList());
+        return entities.stream().map(this::toDto).toList();
     }
 
     public UserProfileDto toUserProfileDto(User user) {
